Set up to send back notifications when loading worldviews